# dynamic_robot_localization_tests

./: .project  CMakeLists.txt  LICENSE  README.md  package.xml
datasets/: topics.txt
datasets/labiomep/: README.md
datasets/ship_interior/: tilting_laser_params.yaml
install/: a_dependencies.sh  b_gazebo.sh  c_repositories.bash  d_repositories_update.bash  install.bash
launch/: localization_plots.launch  localization_tests.launch  slam_3dof.launch
launch/localization_systems/: amcl.launch  amcl_simulated.launch  dynamic_robot_localization.launch  ekf.launch
launch/navigation_systems/: linear_navigation.launch
launch/robots/: guardian_6dof.launch  guardian_slam.launch  kinect2.launch
launch/slam_systems/: crsm.launch  crsm.yaml  gmapping.launch  hector.launch  hector_slam.launch  hector_trajectory_server.launch  rgbd_mapping_kinect2.launch  rtab.launch
maps/labiomep/: walls.ad_prt  walls.sldprt  walls.step  walls.stl
maps/mostra_up_2015/: mostra_up_2015-03-11-17-09-26.pgm  mostra_up_2015-03-11-17-09-26.yaml  mostra_up_2015-03-11-17-09-26_drl_1.pgm  mostra_up_2015-03-11-17-09-26_drl_1.yaml  mostra_up_2015-03-11-17-09-26_gmapping_both_lasers.pgm  mostra_up_2015-03-11-17-09-26_gmapping_both_lasers.yaml  mostra_up_2015-03-11-17-09-26_hector_both_lasers.pgm  mostra_up_2015-03-11-17-09-26_hector_both_lasers.yaml  mostra_up_2015-03-11-17-56-55_drl.pgm  mostra_up_2015-03-11-17-56-55_drl.yaml
maps/robotica/: walls_100mm.pcd  walls_100mm.ply  walls_50mm.pcd  walls_60mm.pcd  walls_60mm.ply
maps/ship_interior/: path.yaml  path_fast.yaml  path_for_unstable_ground.yaml  path_for_unstable_ground_complex.yaml  path_for_unstable_ground_complex_fast.yaml  path_for_unstable_ground_fast.yaml  path_very_fast.yaml
maps/tum/: freiburg2_pionner_slam.yaml
maps/van/: move_inside_van.yaml  move_into_van.yaml  move_into_van_side.yaml
models/: readme.txt
models/eur_pallet/: model.config  model.sdf
models/lab_with_windows/: model.config  model.sdf
models/lab_without_windows/: model.config  model.sdf
models/ship_interior/: model.config  model.sdf
results/: ros_topics.txt
rviz/: dynamic_robot_localization.rviz  dynamic_robot_localization_planar.rviz  dynamic_robot_localization_tridimensional.rviz
rviz/asl/: dynamic_robot_localization_planar.rviz  dynamic_robot_localization_tridimensional.rviz  ethzasl_kinect_dataset.rviz
rviz/asl_icp_mapper/: dynamic_robot_localization_tridimensional.rviz
rviz/crob_lab/: dynamic_robot_localization_planar.rviz  dynamic_robot_localization_tridimensional.rviz
rviz/crob_lab_slam/: dynamic_robot_localization_planar.rviz
rviz/mostra_up_2015/: dynamic_robot_localization_planar.rviz
rviz/slam/: crsm.rviz  gmapping.rviz
tools/: convert_pcds_to_ply.sh  generate_images_from_videos.sh  generate_results.bash  generate_results.sh  generate_results_amcl.bash  generate_results_amcl.sh  generate_results_ethzasl.bash  remove_tf.py  save_last_pointclouds.bash  save_last_pointclouds.sh
worlds/: lab_with_windows.world  lab_without_windows.world  ship_interior.world  ship_interior_corner.world  ship_interior_with_cluttered_environment.world  ship_interior_with_cluttered_environment_and_unstable_ground.world  ship_interior_with_cluttered_environment_dynamic.world  ship_interior_with_cluttered_environment_dynamic_and_unstable_ground.world  ship_interior_with_cluttered_environment_dynamic_plane.world  ship_interior_with_cluttered_environment_occluded_wall.world  ship_interior_with_new_objects.world  ship_interior_with_unstable_ground.world  ship_interior_with_unstable_ground_complex.world  van.world  van_with_floor_bellow.world  van_with_pallet.world
(+254 files in other folders)
