<?xml version="1.0"?>
<package>
	<name>dynamic_robot_localization_tests</name>
	<version>0.1.0</version>
	<description>The dynamic_robot_localization package offers 6DOF localization using PCL</description>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>dynamic_robot_localization</run_depend>
	<run_depend>amcl</run_depend>
	<run_depend>fake_localization</run_depend>
	<run_depend>robot_pose_ekf</run_depend>
	<run_depend>robot_localization_tools</run_depend>
	<run_depend>map_server</run_depend>
	<run_depend>hector-slam</run_depend>
	<run_depend>guardian_gazebo</run_depend>
	<run_depend>cob_linear_nav</run_depend>
</package>